chapter-01/_01_tiller-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tiller-deploy
  namespace: kube-system
  labels:
    app: helm
    name: tiller
  annotations:
    deployment.kubernetes.io/revision: '2'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helm
      name: tiller
  template:
    metadata:
      labels:
        app: helm
        name: tiller
    spec:
      containers:
        - name: tiller
          image: registry.cn-hangzhou.aliyuncs.com/google_containers/tiller:v2.12.3
          ports:
            - name: tiller
              containerPort: 44134
              protocol: TCP
            - name: http
              containerPort: 44135
              protocol: TCP
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      serviceAccountName: tiller
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
