chapter-01/_01_nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  labels:
    app: nginx-app
spec:
  replicas: 2
  revisionHistoryLimit: 5
  template:
    metadata:
      name: nginx-app
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx-app
          image: nginx:latest
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 200m
              memory: 128Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  selector:
    matchLabels:
      app: nginx-app
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  labels:
    app: nginx-app
  namespace: default
spec:
  selector:
    app: nginx-app
  ports:
    - name: tcp-80-80-2b6tl
      port: 8080
      protocol: TCP
      targetPort: 80
  type: ClusterIP
  externalIPs:
    - 192.168.77.1
  sessionAffinity: None
---
