chapter-01/_01_nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  labels:
    app: nginx-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: master.kubernetes.io
    - http:
        paths:
          - backend:
              serviceName: nginx-app
              servicePort: 80
