chapter-01/_02_tomcat-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
  labels:
    env: testing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deploy
  namespace: testing
  labels:
    app: tomcat-deploy
spec:
  replicas: 2
  template:
    metadata:
      name: tomcat-deploy
      labels:
        app: tomcat-deploy
    spec:
      containers:
        - name: tomcat-deploy
          image: tomcat:8.0.50-jre8-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: httpport
            - containerPort: 8009
              name: ajpport
      restartPolicy: Always
  selector:
    matchLabels:
      app: tomcat-deploy
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
  namespace: testing
  labels:
    app: tomcat-svc
spec:
  selector:
    app: tomcat-deploy
  ports:
    - port: 80
      name: http
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-deploy
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: master.kubernetes.io
      http:
        paths:
          - path: /tomcat
            backend:
              serviceName: tomcat-svc
              servicePort: 80
